@@ -17,24 +17,22 @@ package ghidra.app.util.bin.format.golang.rtti;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import ghidra.app.util.bin.BinaryReader;
 import ghidra.app.util.bin.format.golang.rtti.types.GoType;
 import ghidra.app.util.bin.format.golang.structmapping.*;
-import ghidra.program.model.address.Address;
-import ghidra.program.model.address.AddressRange;
+import ghidra.program.model.address.*;
 import ghidra.program.model.data.*;
 import ghidra.program.model.listing.Program;
 import ghidra.program.model.mem.Memory;
 import ghidra.program.model.mem.MemoryBlock;
 import ghidra.program.model.symbol.Symbol;
-import ghidra.program.model.symbol.SymbolUtilities;
 import ghidra.util.Msg;
+import ghidra.util.exception.CancelledException;
 import ghidra.util.task.TaskMonitor;
 
 /**
- * Represents a golang moduledata structure, which contains a lot of invaluable bootstrapping
+ * Represents a golang moduledata structure, which contains a lot of valuable bootstrapping
  * data for RTTI and function data. 
  */
 @StructureMapping(structureName = "runtime.moduledata")
@@ -46,13 +44,46 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 	@ContextField
 	private StructureContext<GoModuledata> structureContext;
 
-	@FieldMapping
+	@FieldMapping(presentWhen = "1.16+")
 	@MarkupReference
-	private long pcHeader;	// pointer to the GoPcHeader instance, useful for bootstrapping
+	private long pcHeader;	// pointer to the GoPcHeader instance, useful for bootstrapping.  when ver >= 1.16, this is first field
+
+	@FieldMapping(presentWhen = "1.16+")
+	private GoSlice funcnametab;	// []uint8 blob of null term strings
+
+	@FieldMapping(presentWhen = "1.16+")
+	private GoSlice cutab;	// []uint32
+
+	@FieldMapping
+	private GoSlice filetab; // []uint32 when ver <=1.15, []uint8 blob of null term strings when ver >= 1.16
+
+	@FieldMapping(presentWhen = "1.16+")
+	private GoSlice pctab;	// []uint8
+
+	@FieldMapping
+	private GoSlice pclntable;	// []uint8, shares footprint with ftab.  when ver <= 1.15, this is first field and happens to have a GoPcHeader
+
+	@FieldMapping
+	private GoSlice ftab;	// []runtime.functab, shares footprint with pclntable
+
+	@FieldMapping
+	private long data;
+
+	@FieldMapping
+	private long edata;
 
 	@FieldMapping
 	@MarkupReference
 	private long text;
+
+	@FieldMapping
+	private long etext;
+
+	@FieldMapping
+	private long noptrdata;
+
+	@FieldMapping
+	private long enoptrdata;
 
 	@FieldMapping(fieldName = "types")
 	private long typesOffset;
@@ -60,26 +91,14 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 	@FieldMapping(fieldName = "etypes")
 	private long typesEndOffset;
 
+	@FieldMapping(optional = true)
+	private long gofunc;
+
+	@FieldMapping
+	private long end;
+
 	@FieldMapping(fieldName = "typelinks")
 	private GoSlice typeLinks;
-
-	@FieldMapping
-	private GoSlice funcnametab;	// []uint8 blob of null term strings
-
-	@FieldMapping
-	private GoSlice cutab;	// []uint32
-
-	@FieldMapping
-	private GoSlice filetab; // []uint8 blob of null term strings
-
-	@FieldMapping
-	private GoSlice pctab;	// []uint8
-
-	@FieldMapping
-	private GoSlice pclntable;	// []uint8, shares footprint with ftab
-
-	@FieldMapping
-	private GoSlice ftab;	// []runtime.functab, shares footprint with pclntable
 
 	@FieldMapping
 	private GoSlice itablinks; // []*runtime.itab (array of pointers to runtime.tab)
@@ -95,37 +114,101 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 	 * Compares the data in this structure to fields in a GoPcHeader and returns true if they
 	 * match.
 	 * 
-	 * @param pclntab GoPcHeader instance
+	 * @param otherPcHeader GoPcHeader instance
 	 * @return boolean true if match, false if no match
 	 */
-	public boolean matchesPclntab(GoPcHeader pclntab) {
-		return (!pclntab.hasTextStart() || pclntab.getTextStart().equals(getText())) &&
-			pclntab.getFuncnameAddress().equals(funcnametab.getArrayAddress());
+	public boolean matchesPcHeader(GoPcHeader otherPcHeader) {
+		return (!otherPcHeader.hasTextStart() || otherPcHeader.getTextStart().equals(getText())) &&
+			otherPcHeader.getFuncnameAddress().equals(funcnametab.getArrayAddress());
 	}
 
 	@Markup
 	public GoPcHeader getPcHeader() throws IOException {
-		return programContext.readStructure(GoPcHeader.class, pcHeader);
+		return pcHeader != 0 // when ver >= 1.16 
+				? programContext.readStructure(GoPcHeader.class, pcHeader)
+				: programContext.readStructure(GoPcHeader.class, pclntable.getArrayAddress());
 	}
 
+	public Address getPcHeaderAddress() {
+		return pcHeader != 0
+				? programContext.getDataAddress(pcHeader)
+				: pclntable.getArrayAddress();
+	}
+
+	/**
+	 * Returns the address of the beginning of the text section.
+	 * 
+	 * @return address of the beginning of the text section
+	 */
 	public Address getText() {
 		return programContext.getCodeAddress(text);
 	}
 
+	public AddressRange getTextRange() {
+		Address textstart = getText();
+		Address textend = programContext.getCodeAddress(etext);
+		return new AddressRangeImpl(textstart, textend);
+	}
+
+	public AddressRange getRoDataRange() {
+		Address roStart = programContext.getCodeAddress(etext); // TODO: rodata is avail in newer govers
+		Address roEnd = programContext.getCodeAddress(end);
+		return new AddressRangeImpl(roStart, roEnd);
+	}
+
+	public AddressRange getDataRange() {
+		Address dataStart = programContext.getCodeAddress(data);
+		Address dataEnd = programContext.getCodeAddress(edata);
+		return new AddressRangeImpl(dataStart, dataEnd);
+	}
+
+	/**
+	 * Returns the starting offset of type info
+	 * 
+	 * @return starting offset of type info
+	 */
 	public long getTypesOffset() {
 		return typesOffset;
 	}
 
+	/**
+	 * Returns the ending offset of type info
+	 * 
+	 * @return ending offset of type info
+	 */
 	public long getTypesEndOffset() {
 		return typesEndOffset;
 	}
 
+	/**
+	 * Return the offset of the gofunc location
+	 * @return offset of the gofunc location
+	 */
+	public long getGofunc() {
+		return gofunc;
+	}
+
+	/**
+	 * Reads a {@link GoFuncData} structure from the pclntable.
+	 * 
+	 * @param offset relative to the pclntable
+	 * @return {@link GoFuncData}
+	 * @throws IOException if error reading data
+	 */
 	public GoFuncData getFuncDataInstance(long offset) throws IOException {
 		return programContext.readStructure(GoFuncData.class, pclntable.getArrayOffset() + offset);
 	}
 
+	/**
+	 * Returns true if this GoModuleData is the module data that contains the specified
+	 * GoFuncData structure.
+	 * 
+	 * @param offset offset of a GoFuncData structure
+	 * @return true if this GoModuleData is the module data that contains the specified GoFuncData
+	 * structure
+	 */
 	public boolean containsFuncDataInstance(long offset) {
-		return pclntable.isOffsetWithinData(offset, 1);
+		return pclntable.containsOffset(offset, 1);
 	}
 
 	/**
@@ -143,31 +226,47 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 		return subSlice;
 	}
 
+	/**
+	 * Returns true if this module data structure contains sane values.
+	 * 
+	 * @return true if this module data structure contains sane values
+	 */
 	public boolean isValid() {
-		MemoryBlock txtBlock = programContext.getProgram().getMemory().getBlock(".text");
-		if (txtBlock != null && txtBlock.getStart().getOffset() != text) {
+		MemoryBlock txtBlock = programContext.getGoSection("text");
+		if (txtBlock != null && !txtBlock.contains(getText())) {
 			return false;
 		}
 
-		MemoryBlock typelinkBlock = programContext.getProgram().getMemory().getBlock(".typelink");
+		MemoryBlock typelinkBlock = programContext.getGoSection("typelink");
 		if (typelinkBlock != null &&
 			typelinkBlock.getStart().getOffset() != typeLinks.getArrayOffset()) {
 			return false;
 		}
 
 		// all these static slices should be allocated with len == cap.  If not true, fail.
-		if (!typeLinks.isFull() || !filetab.isFull() || !pctab.isFull() || !pclntable.isFull() ||
-			!ftab.isFull()) {
+		if (!typeLinks.isFull() || !filetab.isFull() || (pctab != null && !pctab.isFull()) ||
+			!pclntable.isFull() || !ftab.isFull()) {
 			return false;
 		}
 
 		return true;
 	}
 
+	/**
+	 * Returns a slice that contains all the function names.
+	 * 
+	 * @return slice that contains all the function names
+	 */
 	public GoSlice getFuncnametab() {
 		return funcnametab;
 	}
 
+	/**
+	 * Returns a list of all functions contained in this module.
+	 * 
+	 * @return list of all functions contained in this module
+	 * @throws IOException if error reading data
+	 */
 	public List<GoFuncData> getAllFunctionData() throws IOException {
 		List<GoFunctabEntry> functabentries =
 			getFunctabEntriesSlice().readList(GoFunctabEntry.class);
@@ -178,32 +277,85 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 		return result;
 	}
 
+	/**
+	 * Returns the cutab slice.
+	 * 
+	 * @return cutab slice
+	 */
+	public GoSlice getCutab() {
+		return cutab;
+	}
+
+	/**
+	 * Returns the filetab slice.
+	 * 
+	 * @return filetab slice
+	 */
+	public GoSlice getFiletab() {
+		return filetab;
+	}
+
+	public GoSlice getPclntable() {
+		return pclntable;
+	}
+
+	/**
+	 * Returns the pctab slice.
+	 * 
+	 * @return pctab slice
+	 */
+	public GoSlice getPctab() {
+		return pctab;
+	}
+
+	public GoSlice getPcValueTable() {
+		return pctab != null ? pctab : pclntable;
+	}
+
+	/**
+	 * Returns a reference to the controlling {@link GoRttiMapper go binary} context.
+	 * 
+	 * @return reference to the controlling {@link GoRttiMapper go binary} context
+	 */
+	public GoRttiMapper getGoBinary() {
+		return programContext;
+	}
+
 	@Override
 	public StructureContext<GoModuledata> getStructureContext() {
 		return structureContext;
 	}
 
 	@Override
-	public void additionalMarkup(MarkupSession session) throws IOException {
-		typeLinks.markupArray("moduledata.typeLinks", programContext.getInt32DT(), false, session);
+	public void additionalMarkup(MarkupSession session) throws IOException, CancelledException {
+		typeLinks.markupArray("moduledata.typeLinks", null, programContext.getInt32DT(), false,
+			session);
 		typeLinks.markupElementReferences(4, getTypeList(), session);
 
-		itablinks.markupArray("moduledata.itablinks", GoItab.class, true, session);
+		itablinks.markupArray("moduledata.itablinks", null, GoItab.class, true, session);
 
-		markupStringTable(funcnametab.getArrayAddress(), funcnametab.getLen(), session);
+		if (funcnametab != null) {
+			markupStringTable(funcnametab.getArrayAddress(), funcnametab.getLen(), session);
+		}
 		markupStringTable(filetab.getArrayAddress(), filetab.getLen(), session);
 
 		GoSlice subSlice = getFunctabEntriesSlice();
-		subSlice.markupArray("moduledata.ftab", GoFunctabEntry.class, false, session);
+		subSlice.markupArray("moduledata.ftab", null, GoFunctabEntry.class, false, session);
 		subSlice.markupArrayElements(GoFunctabEntry.class, session);
 
 		Structure textsectDT =
 			programContext.getGhidraDataType("runtime.textsect", Structure.class);
 		if (textsectDT != null) {
-			textsectmap.markupArray("runtime.textsectionmap", textsectDT, false, session);
+			textsectmap.markupArray("runtime.textsectionmap", null, textsectDT, false, session);
 		}
 	}
 
+	/**
+	 * Returns a list of the GoItabs present in this module.
+	 * 
+	 * @return list of the GoItabs present in this module
+	 * @throws IOException if error reading data
+	 */
 	@Markup
 	public List<GoItab> getItabs() throws IOException {
 		List<GoItab> result = new ArrayList<>();
@@ -238,6 +390,12 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 		}
 	}
 
+	/**
+	 * Returns an iterator that walks all the types contained in this module
+	 * 
+	 * @return iterator that walks all the types contained in this module
+	 * @throws IOException if error reading data
+	 */
 	@Markup
 	public Iterator<GoType> iterateTypes() throws IOException {
 		return getTypeList().stream()
@@ -253,12 +411,18 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 				.iterator();
 	}
 
+	/**
+	 * Returns a list of locations of the types contained in this module.
+	 * 
+	 * @return list of addresses of GoType structures
+	 * @throws IOException if error reading data 
+	 */
 	public List<Address> getTypeList() throws IOException {
 		long[] typeOffsets = typeLinks.readUIntList(4 /* always sizeof(int32) */);
 		Address typesBaseAddr = programContext.getDataAddress(typesOffset);
 		List<Address> result = Arrays.stream(typeOffsets)
 				.mapToObj(offset -> typesBaseAddr.add(offset))
-				.collect(Collectors.toList());
+				.toList();
 		return result;
 	}
 
@@ -273,8 +437,7 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 	/* package */ static GoModuledata getFirstModuledata(GoRttiMapper context)
 			throws IOException {
 		Program program = context.getProgram();
-		Symbol firstModuleDataSymbol =
-			SymbolUtilities.getUniqueSymbol(program, "runtime.firstmoduledata");
+		Symbol firstModuleDataSymbol = GoRttiMapper.getGoSymbol(program, "runtime.firstmoduledata");
 		if (firstModuleDataSymbol == null) {
 			return null;
 		}
@@ -285,15 +448,15 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 	 * Searches memory for a likely GoModuledata structure.
 	 * 
 	 * @param context already initialized {@link GoRttiMapper}
-	 * @param pclntabAddress address of an already found {@link GoPcHeader}
-	 * @param pclntab the {@link GoPcHeader}
+	 * @param pcHeaderAddress address of an already found {@link GoPcHeader}
+	 * @param pcHeader the {@link GoPcHeader}
 	 * @param range memory range to search.  Will be different for different types of binaries
 	 * @param monitor {@link TaskMonitor} 
 	 * @return new GoModuledata instance, or null if not found
 	 * @throws IOException if error reading found structure
 	 */
 	/* package */ static GoModuledata findFirstModule(GoRttiMapper context,
-			Address pclntabAddress, GoPcHeader pclntab, AddressRange range, TaskMonitor monitor)
+			Address pcHeaderAddress, GoPcHeader pcHeader, AddressRange range, TaskMonitor monitor)
 			throws IOException {
 		if (range == null) {
 			return null;
@@ -306,7 +469,7 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 		// field of the GoModuledata structure.
 		int ptrSize = context.getPtrSize();
 		byte[] searchBytes = new byte[ptrSize];
-		context.getDataConverter().putValue(pclntabAddress.getOffset(), ptrSize, searchBytes, 0);
+		context.getDataConverter().putValue(pcHeaderAddress.getOffset(), ptrSize, searchBytes, 0);
 		Address moduleAddr = memory.findBytes(range.getMinAddress(), range.getMaxAddress(),
 			searchBytes, null, true, monitor);
 		if (moduleAddr == null) {
@@ -317,50 +480,6 @@ public class GoModuledata implements StructureMarkup<GoModuledata> {
 
 		// Verify that we read a good GoModuledata struct by comparing some of its values to
 		// the pclntab structure.
-		return moduleData.matchesPclntab(pclntab) ? moduleData : null;
+		return moduleData.matchesPcHeader(pcHeader) ? moduleData : null;
 	}
 }
-
-/*
-struct runtime.moduledata Length:276 Alignment:4{
-  runtime.pcHeader*pcHeader
-  []uint8                                                  funcnametab      
-  []uint32                                                cutab                 
-  []uint8                                                  filetab                 
-  []uint8                                                  pctab                 
-  []uint8                                                  pclntable            
-  []runtime.functab                                ftab
-uintptr                                  findfunctab
-uintptr                                  minpc
-uintptr                                  maxpc
-uintptr                                  text
-uintptr                                  etext
-uintptr                                  noptrdata
-uintptr                                  enoptrdata
-uintptr                                  data
-uintptr                                  edata
-uintptr                                  bss
-uintptr                                  ebss
-uintptr                                  noptrbss
-uintptr                                  enoptrbss
-uintptr                                  end
-uintptr                                  gcdata
-uintptr                                  gcbss
-uintptr                                  types
-uintptr                                  etypes
-uintptr                                  rodata
-uintptr                                  gofunc                
-  []runtime.textsect                              textsectmap       
-  []int32                                                  typelinks             
-  []*runtime.itab                                    itablinks             
-  []
-runtime.ptabEntry ptab
-string                                                   pluginpath          
-  []runtime.modulehash                           pkghashes
-string                                                   modulename      
-  []runtime.modulehash                           modulehashes
-uint8                                     hasmain
-runtime.bitvector                                gcdatamask
-runtime.bitvector                                gcbssmask map[runtime.typeOff]*runtime._type  typemap
-bool                                                       bad runtime.moduledata*next
-}pack()*/
